[workspace]
members = [".", "nulid_derive", "nulid_macros"]
resolver = "2"

[package]
name = "nulid"
version = "0.4.0"
edition = "2024"
authors = ["kakilangit <crates@kakilangit.dev>"]
description = "Nanosecond-Precision Universally Lexicographically Sortable Identifier"
documentation = "https://docs.rs/nulid"
homepage = "https://github.com/kakilangit/nulid"
repository = "https://github.com/kakilangit/nulid"
readme = "README.md"
license = "MIT"
keywords = ["ulid", "uuid", "identifier", "sortable", "timestamp"]
categories = ["data-structures", "encoding", "date-and-time"]
rust-version = "1.88"

[[bin]]
name = "nulid"
path = "src/bin/nulid.rs"

[[example]]
name = "basic"

[[example]]
name = "derive_wrapper"
required-features = ["derive"]

[[example]]
name = "macros"
required-features = ["macros"]

[[example]]
name = "combined_features"
required-features = ["derive", "macros"]

[[example]]
name = "monotonic"

[[example]]
name = "postgres_types_example"
required-features = ["postgres-types"]

[[example]]
name = "rkyv_example"
required-features = ["rkyv"]

[[example]]
name = "serde_example"
required-features = ["serde"]

[[example]]
name = "sqlx_postgres"
required-features = ["sqlx"]

[[example]]
name = "uuid_conversion"
required-features = ["uuid"]

[features]
default = ["std"]
std = []
derive = ["dep:nulid_derive"]
macros = ["dep:nulid_macros"]
serde = ["dep:serde"]
uuid = ["dep:uuid"]
sqlx = ["dep:sqlx", "uuid"]
postgres-types = ["dep:postgres-types", "dep:bytes"]
rkyv = ["dep:rkyv"]

[dependencies]
rand = "0.9"
quanta = "0.12"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
uuid = { version = "1.0", optional = true, features = ["v4"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["postgres", "uuid", "macros", "runtime-tokio"] }
postgres-types = { version = "0.2", optional = true }
bytes = { version = "1.11", optional = true }
rkyv = { version = "0.8", optional = true, default-features = false, features = ["alloc", "bytecheck"] }
nulid_derive = { version = "0.4.0", path = "./nulid_derive", optional = true }
nulid_macros = { version = "0.4.0", path = "./nulid_macros", optional = true }

[dev-dependencies]
bincode = { version = "2.0", features = ["serde"] }
criterion = "0.8"
rmp-serde = "1.3"
serde_json = "1.0"
toml = "0.9"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "nulid_benchmark"
harness = false

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
