[workspace]
members = [".", "nulid_derive", "nulid_macros"]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2024"
rust-version = "1.88"
authors = ["kakilangit <crates@kakilangit.dev>"]
license = "MIT"
repository = "https://github.com/kakilangit/nulid"
homepage = "https://github.com/kakilangit/nulid"

[package]
name = "nulid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Nanosecond-Precision Universally Lexicographically Sortable Identifier"
documentation = "https://docs.rs/nulid"
homepage = "https://github.com/kakilangit/nulid"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["ulid", "uuid", "identifier", "sortable", "timestamp"]
categories = ["data-structures", "encoding", "date-and-time"]

[[bin]]
name = "nulid"
path = "src/bin/nulid.rs"

[[example]]
name = "basic"

[[example]]
name = "derive_wrapper"
required-features = ["derive"]

[[example]]
name = "macros"
required-features = ["macros"]

[[example]]
name = "combined_features"
required-features = ["derive", "macros"]

[[example]]
name = "monotonic"

[[example]]
name = "postgres_types_example"
required-features = ["postgres-types"]

[[example]]
name = "rkyv_example"
required-features = ["rkyv"]

[[example]]
name = "serde_example"
required-features = ["serde"]

[[example]]
name = "sqlx_postgres"
required-features = ["sqlx"]

[[example]]
name = "uuid_conversion"
required-features = ["uuid"]

[features]
default = ["std"]
std = []
derive = ["dep:nulid_derive"]
macros = ["dep:nulid_macros"]
serde = ["dep:serde"]
uuid = ["dep:uuid"]
sqlx = ["dep:sqlx", "uuid"]
postgres-types = ["dep:postgres-types", "dep:bytes"]
rkyv = ["dep:rkyv"]

[dependencies]
rand = "0.9"
quanta = "0.12"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
uuid = { version = "1.0", optional = true, features = ["v4"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["postgres", "uuid", "macros", "runtime-tokio"] }
postgres-types = { version = "0.2", optional = true }
bytes = { version = "1.11", optional = true }
rkyv = { version = "0.8", optional = true, default-features = false, features = ["alloc", "bytecheck"] }
nulid_derive = { workspace = true, optional = true }
nulid_macros = { workspace = true, optional = true }

[dev-dependencies]
bincode = { version = "2.0", features = ["serde"] }
criterion = "0.8"
rmp-serde = "1.3"
serde_json = "1.0"
toml = "0.9"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "nulid_benchmark"
harness = false

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[workspace.dependencies]
nulid_derive = { version = "0.5.2", path = "./nulid_derive" }
nulid_macros = { version = "0.5.2", path = "./nulid_macros" }
