
[package]
name = "nulid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Nanosecond-Precision Universally Lexicographically Sortable Identifier"
documentation = "https://docs.rs/nulid"
homepage = "https://github.com/kakilangit/nulid"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["ulid", "uuid", "identifier", "sortable", "timestamp"]
categories = ["data-structures", "encoding", "date-and-time"]
[workspace]
members = [".", "nulid_derive", "nulid_macros"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("serde", "uuid", "sqlx", "postgres-types", "chrono", "proto"))'] }

[workspace.package]
version = "0.5.11"
edition = "2024"
rust-version = "1.88"
authors = ["kakilangit <crates@kakilangit.dev>"]
license = "MIT"
repository = "https://github.com/kakilangit/nulid"
homepage = "https://github.com/kakilangit/nulid"

[workspace.dependencies]
nulid_derive = { version = "0.5", path = "./nulid_derive" }
nulid_macros = { version = "0.5", path = "./nulid_macros" }

[[bin]]
name = "nulid"
path = "src/bin/nulid.rs"

[features]
default = ["std"]
std = []
derive = ["dep:nulid_derive"]
macros = ["dep:nulid_macros"]
serde = ["dep:serde", "nulid_derive?/serde"]
uuid = ["dep:uuid", "nulid_derive?/uuid"]
sqlx = ["dep:sqlx", "uuid", "nulid_derive?/sqlx"]
postgres-types = ["dep:postgres-types", "dep:bytes", "nulid_derive?/postgres-types"]
rkyv = ["dep:rkyv"]
chrono = ["dep:chrono", "nulid_derive?/chrono"]
proto = ["dep:prost", "dep:prost-types", "dep:prost-build", "nulid_derive?/proto"]

[dependencies]
bytes = { version = "1.11", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock", "std"] }
nulid_derive = { workspace = true, optional = true }
nulid_macros = { workspace = true, optional = true }
postgres-types = { version = "0.2", optional = true }
prost = { version = "0.14", optional = true, default-features = false }
prost-types = { version = "0.14", optional = true, default-features = false }
quanta = "0.12"
rand = "0.9"
rkyv = { version = "0.8", optional = true, default-features = false, features = ["alloc", "bytecheck"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["postgres", "uuid", "macros", "runtime-tokio"] }
uuid = { version = "1.19", optional = true, features = ["v4"] }

[build-dependencies]
prost-build = { version = "0.14", optional = true }

[dev-dependencies]
bincode = { version = "2.0", features = ["serde"] }
criterion = "0.8"
rmp-serde = "1.3"
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"

[[example]]
name = "basic"

[[example]]
name = "derive_wrapper"
required-features = ["derive"]

[[example]]
name = "macros"
required-features = ["macros"]

[[example]]
name = "combined_features"
required-features = ["derive", "macros"]

[[example]]
name = "derive_features"
required-features = ["derive", "serde", "uuid", "sqlx", "postgres-types", "proto"]

[[example]]
name = "monotonic"

[[example]]
name = "postgres_types_example"
required-features = ["postgres-types"]

[[example]]
name = "rkyv_example"
required-features = ["rkyv"]

[[example]]
name = "serde_example"
required-features = ["serde"]

[[example]]
name = "sqlx_postgres"
required-features = ["sqlx"]

[[example]]
name = "uuid_conversion"
required-features = ["uuid"]

[[example]]
name = "chrono_example"
required-features = ["chrono"]

[[example]]
name = "proto_example"
required-features = ["proto"]

[[bench]]
name = "nulid_benchmark"
harness = false

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
