[package]
name = "nulid_derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Derive macros for nulid wrapper types"
documentation = "https://docs.rs/nulid_derive"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["ulid", "uuid", "identifier", "derive", "macro"]
categories = ["data-structures", "encoding"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
nulid = { path = "..", features = ["derive"] }
