[package]
name = "nulid_derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Derive macros for nulid wrapper types"
documentation = "https://docs.rs/nulid_derive"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["ulid", "uuid", "identifier", "derive", "macro"]
categories = ["data-structures", "encoding"]

[lib]
proc-macro = true

[features]
default = []
serde = ["dep:serde"]
uuid = ["dep:uuid"]
sqlx = ["dep:sqlx", "uuid"]
postgres-types = ["dep:postgres-types", "dep:bytes"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
uuid = { version = "1.0", optional = true, features = ["v4"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["postgres", "uuid", "macros"] }
postgres-types = { version = "0.2", optional = true }
bytes = { version = "1.11", optional = true }

[dev-dependencies]
nulid = { path = "..", features = ["derive", "serde", "uuid", "sqlx", "postgres-types"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "uuid"] }
postgres-types = "0.2"
bytes = "1.11"
tokio = { version = "1.0", features = ["rt"] }
