[package]
name = "nulid_derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Derive macros for nulid wrapper types"
documentation = "https://docs.rs/nulid_derive"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["ulid", "uuid", "identifier", "derive", "macro"]
categories = ["data-structures", "encoding"]

[lib]
proc-macro = true

[features]
default = []
serde = ["dep:serde"]
uuid = ["dep:uuid"]
sqlx = ["dep:sqlx", "uuid"]
postgres-types = ["dep:postgres-types", "dep:bytes"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]

[dependencies]
bytes = { version = "1.11", optional = true }
chrono = { version = "0.4", optional = true, default-features = false }
jiff = { version = "0.2", optional = true, default-features = false }
postgres-types = { version = "0.2", optional = true }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["postgres", "uuid", "macros"] }
syn = { version = "2.0", features = ["full"] }
uuid = { version = "1.0", optional = true, features = ["v4"] }

[dev-dependencies]
bincode = { version = "2.0", features = ["serde"] }
bytes = "1.11"
nulid = { path = "..", features = ["derive", "serde", "uuid", "sqlx", "postgres-types", "chrono", "jiff"] }
postgres-types = "0.2"
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "uuid"] }
tokio = { version = "1.0", features = ["rt"] }
uuid = { version = "1.0", features = ["v4"] }
