[package]
name = "nulid_macros"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Procedural macros for nulid - convenient NULID generation"
documentation = "https://docs.rs/nulid_macros"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["ulid", "uuid", "identifier", "macro", "nulid"]
categories = ["data-structures", "encoding"]
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
nulid = { path = ".." }
